--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "aos": "^2.2.0",
     "vue": "^2.5.2",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
     "vuex": "^3.0.1"
