--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "aos": "^2.2.0",
+    "axios": "^0.18.0",
+    "moment": "^2.22.1",
     "vue": "^2.5.2",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.11.0",
+    "vuetify": "^1.0.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
