--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "moment": "^2.22.1",
     "vue": "^2.5.2",
+    "vue-analytics": "^5.10.4",
     "vue-google-signin-button": "^1.0.2",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.1",
